--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/activity_how_to_play.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/activity_how_to_play.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ie.iamshanedoyle.factsgame.activities.HomeActivity"
+    tools:context="ie.iamshanedoyle.factsgame.activities.HowToPlayActivity"
     tools:ignore="MergeRootFrame" />
