--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_home.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Container"
-    tools:context="ie.iamshanedoyle.factsgame.HomeActivity$PlaceholderFragment">
+    tools:context="ie.iamshanedoyle.factsgame.activities.HomeActivity$PlaceholderFragment">
 
     <TextView
         android:text="@string/app_title"
@@ -12,24 +12,28 @@
         style="@style/Button"
         android:text="@string/play_now"
         android:id="@+id/buttonPlayNow"
-        android:layout_below="@+id/textViewTitle" />
+        android:layout_below="@+id/textViewTitle"
+        android:drawableLeft="@drawable/ic_play"/>
 
     <Button
         style="@style/Button"
         android:text="@string/how_to_play"
         android:id="@+id/buttonHowToPlay"
-        android:layout_below="@+id/buttonPlayNow" />
+        android:layout_below="@+id/buttonPlayNow"
+        android:drawableLeft="@drawable/ic_how_to_play"/>
 
     <Button
         style="@style/Button"
         android:text="@string/scores"
         android:id="@+id/buttonScores"
-        android:layout_below="@+id/buttonHowToPlay"/>
+        android:layout_below="@+id/buttonHowToPlay"
+        android:drawableLeft="@drawable/ic_scores"/>
 
     <Button
         style="@style/Button"
         android:text="@string/settings"
         android:id="@+id/buttonSettings"
-        android:layout_below="@+id/buttonScores" />
+        android:layout_below="@+id/buttonScores"
+        android:drawableLeft="@drawable/ic_settings"/>
 
 </RelativeLayout>
