--- a/TheUltimateFactsGame/FactsGame/src/main/res/menu/how_to_play.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/menu/how_to_play.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ie.iamshanedoyle.factsgame.activities.HomeActivity" >
+    tools:context="ie.iamshanedoyle.factsgame.activities.HowToPlayActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
