More updates, such as added the scores.

--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_home.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:text="@string/app_title"
-        style="@style/Title"
+        style="@style/AppTitle"
         android:id="@+id/textViewTitle" />
 
     <Button
