--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/list_item_scores.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/list_item_scores.xml
@@ -9,41 +9,18 @@
     android:paddingLeft="5dp">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Coletty Hartisson"
         android:id="@+id/textViewUser"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textSize="18sp"
-        android:textColor="@color/scores_user_font"
         android:layout_toLeftOf="@+id/textViewPosition"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        style="@style/ScoreListUser" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="230"
         android:id="@+id/textViewScore"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="@color/game_info_value_font"
-        android:textSize="14sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/textViewPosition" />
+        android:layout_toLeftOf="@+id/textViewPosition"
+        style="@style/ScoreListScore" />
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
         android:text="1st"
         android:id="@+id/textViewPosition"
-        android:fontFamily="sans-serif-light"
-        android:textStyle="normal"
-        android:textColor="@color/scores_position_font"
-        android:textSize="16sp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"/>
+        style="@style/ScoreListPosition" />
 </RelativeLayout>
