--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/styles.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/styles.xml
@@ -106,5 +106,43 @@
         <item name="android:dividerHeight">1dp</item>
     </style>
 
+    <style name="ScoreListUser">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/scores_user_font</item>
+        <item name="android:layout_alignParentLeft">true</item>
+    </style>
+
+    <style name="ScoreListPosition">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/scores_position_font</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="ScoreListScore">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/game_info_value_font</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+    </style>
+
+    <style name="DividerStyle" parent="FillWidth">
+        <item name="android:color">@color/game_info_value_font</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
 
 </resources>
