--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/dimens.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/dimens.xml
@@ -3,7 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-
     <dimen name="title_font">37sp</dimen>
     <dimen name="button_font">18sp</dimen>
     <dimen name="game_info_title_font">12sp</dimen>
@@ -15,10 +14,16 @@
     <dimen name="scores_position_font">16sp</dimen>
     <dimen name="scores_score_font">14sp</dimen>
 
-
     <dimen name="button_margin_bottom">20dp</dimen>
     <dimen name="button_margin_sides">20dp</dimen>
     <dimen name="title_margin_top">40dp</dimen>
     <dimen name="title_margin_bottom">56dp</dimen>
+
+    <dimen name="scores_listview_divider_height">1dp</dimen>
+    <dimen name="scores_divider_margin_top">15dp</dimen>
+    <dimen name="scores_divider_margin_bottom">5dp</dimen>
+    <dimen name="scores_list_score_text">14sp</dimen>
+    <dimen name="scores_list_user_text">18sp</dimen>
+    <dimen name="scores_list_position_text">16sp</dimen>
 
 </resources>
