--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/styles.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/styles.xml
@@ -103,7 +103,7 @@
     <style name="ScoresList" parent="Fill">
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:divider">#d0d0d0</item>
-        <item name="android:dividerHeight">1dp</item>
+        <item name="android:dividerHeight">@dimen/scores_listview_divider_height</item>
     </style>
 
     <style name="ScoreListUser">
@@ -111,7 +111,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/scores_user_font</item>
         <item name="android:textColor">@color/scores_user_font</item>
         <item name="android:layout_alignParentLeft">true</item>
     </style>
@@ -122,7 +122,7 @@
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/scores_position_font</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/scores_list_position_text</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:gravity">center</item>
     </style>
@@ -133,15 +133,15 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/game_info_value_font</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/scores_list_score_text</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentLeft">true</item>
     </style>
 
     <style name="DividerStyle" parent="FillWidth">
         <item name="android:color">@color/game_info_value_font</item>
-        <item name="android:layout_marginTop">15dp</item>
-        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginTop">@dimen/scores_divider_margin_top</item>
+        <item name="android:layout_marginBottom">@dimen/scores_divider_margin_bottom</item>
     </style>
 
 
