Added a select state to the title with back.

--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_how_to_play.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/fragment_how_to_play.xml
@@ -9,7 +9,8 @@
         android:drawableLeft="@drawable/ic_up"
         android:drawablePadding="-6dp"
         android:text="@string/how_to_play"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:background="@drawable/title"/>
 
     <ScrollView
         style="@style/Fill"
