--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/dimens.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
 
     <dimen name="button_margin_bottom">20dp</dimen>
     <dimen name="button_margin_sides">20dp</dimen>
+    <dimen name="game_button_margin_sides">8dp</dimen>
     <dimen name="title_margin_top">40dp</dimen>
     <dimen name="title_margin_bottom">56dp</dimen>
 
