--- a/TheUltimateFactsGame/FactsGame/src/main/res/layout/list_item_scores.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/layout/list_item_scores.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/MatchWidth"
-    android:layout_height="60dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:paddingRight="5dp"
-    android:paddingLeft="5dp">
+    style="@style/ScoresListItem">
 
     <TextView
-        android:text="Coletty Hartisson"
         android:id="@+id/textViewUser"
-        android:layout_toLeftOf="@+id/textViewPosition"
-        style="@style/ScoreListUser" />
+        style="@style/ScoreListUser"
+        android:layout_toLeftOf="@+id/textViewPosition" />
 
     <TextView
-        android:text="230"
         android:id="@+id/textViewScore"
-        android:layout_toLeftOf="@+id/textViewPosition"
-        style="@style/ScoreListScore" />
+        style="@style/ScoreListScore"
+        android:layout_toLeftOf="@+id/textViewPosition" />
+
     <TextView
-        android:text="1st"
         android:id="@+id/textViewPosition"
         style="@style/ScoreListPosition" />
+
 </RelativeLayout>
