--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/attrs.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/attrs.xml
@@ -7,4 +7,18 @@
             <enum name="horizontal" value="1"/>
         </attr>
     </declare-styleable>
+    <declare-styleable name="CountdownTimerView">
+        <attr name="text" format="string" />
+        <attr name="textColor" format="color" />
+        <attr name="textSize" format="dimension" />
+        <attr name="barColor" format="color" />
+        <attr name="rimColor" format="color" />
+        <attr name="rimWidth" format="dimension" />
+        <attr name="spinSpeed" format="dimension" />
+        <attr name="delayMillis" format="integer" />
+        <attr name="circleColor" format="color" />
+        <attr name="radius" format="dimension" />
+        <attr name="barWidth" format="dimension" />
+        <attr name="barLength" format="dimension" />
+    </declare-styleable>
 </resources>
