--- a/TheUltimateFactsGame/FactsGame/src/main/res/values/colors.xml
+++ b/TheUltimateFactsGame/FactsGame/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="game_info_title_font">#7c7b7b</color>
     <color name="game_info_value_font">#f39c12</color>
     <color name="game_time_font">#3498db</color>
+    <color name="game_question_font">#2c3e50</color>
     <color name="how_to_title_font">#f39c12</color>
     <color name="how_to_content_font">#2c3e50</color>
     <color name="scores_user_font">#333333</color>
